# smallest-ai-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  server.py
